# CiscoEngine

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
shaders/: fragment.glsl
src/: glad.c  main.cpp
src/camera/: camera.cpp  camera.hpp
src/lighting/: lighting.cpp  lighting.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/scene/: scene.cpp  scene.hpp
src/shader/: shader.cpp  shader.hpp
